--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "db:seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@supabase/supabase-js": "^2.43.4",
     "framer-motion": "^11.2.10",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.394.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
+    "three": "^0.180.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
